# buzz

./: .dockerignore  .env.example  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INVITES_CHECKPOINT.md  Justfile  NOSTR.md  README.md  RELEASING.md  SECURITY.md  TESTING.md  VISION.md  VISION_ACTIVITY.md  deny.toml  docker-compose.yml  flake.nix  formal.md  justfile  lefthook.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pr-1329--inbox-hover-scrollbar.png\n100644 blob 1c0aa33a8397c4aae8369f6fa24dbd5c55c76c7e	pr-1329--thread-connectors.png\n  preview-features.json
.claude/: settings.local.json
.github/workflows/: auto-tag-on-release-pr-merge.yml  benchmark-harbor.yml  ci.yml  docker.yml  helm-chart.yml  linux-canary.yml  push-gateway-helm-chart.yml  release.yml  signed-macos-canary.yml  sprout-agent-bundle.yml  windows-canary.yml
.intersect/: sadscan.yaml
RESEARCH/: WELCOME_TEAM_KICKOFF_PLAN.md  WELCOME_TEAM_KICKOFF_TECH_MAP.md
admin-web/: index.html
admin-web/src/: App.tsx  styles.css  types.ts
admin-web/tests/: routes.spec.ts
bench/: t1a_evidence.sh
benchmarks/agent-reply-latency/: README.md
benchmarks/harbor-buzz-orchestra/: README.md  VERIFIER_PREPARATION.md
crates/buzz-acp/: Cargo.toml  README.md
crates/buzz-acp/src/: acp.rs  base_prompt.md  config.rs  engram_fetch.rs  filter.rs  goose_usage.rs  grant_sync.rs  latency.rs  leader.rs  ledger.rs  lib.rs  observer.rs  pool.rs  queue.rs  relay.rs  scope.rs  session_store.rs  setup_mode.rs  silent_reply.rs  thread_follow.rs  usage.rs
crates/buzz-agent/: Cargo.toml  README.md
crates/buzz-cli/: AGENTS.md  Cargo.toml  README.md  TESTING.md
crates/buzz-conformance/: Cargo.toml
crates/buzz-core/: Cargo.toml
crates/buzz-db/: Cargo.toml
crates/buzz-dev-mcp/: Cargo.toml
crates/buzz-migrate/: Cargo.toml
crates/buzz-migrate/src/: attest.rs  lib.rs  main.rs  oidc.rs  roster.rs  server.rs  token.rs
crates/buzz-pairing-cli/: Cargo.toml
crates/buzz-push-gateway/: Cargo.toml
crates/buzz-relay/: AGENTS.md  Cargo.toml
crates/buzz-sdk/: Cargo.toml
crates/buzz-test-client/: Cargo.toml
crates/buzz-voice/: Cargo.toml
crates/buzz-voice/src/: lib.rs  models.rs  pocket.rs
crates/buzz-workflow/: Cargo.toml
crates/buzz-ws-client/: Cargo.toml
crates/buzz-ws-client/src/: connection.rs  message.rs
crates/sprout-acp/: README.md
crates/sprout-cli/: TESTING.md
crates/sprout-sdk/: Cargo.toml
deploy/compose/: .env.example  Caddyfile  README.md  compose.caddy.yml  compose.yml
deploy/nixos/: README.md
design/onboarding/: README.md  spec-01-02.md  spec-03.md  spec-04.md  spec-05-06.md  spec-07.md
desktop/: AGENTS.md  announcementDemoAgentPlugin.ts  index.html  package.json  playwright.config.ts  tailwind.config.js  test-loader-hooks.mjs  vite.config.ts
desktop/fixtures/: relay-url-normalization.json
desktop/scripts/: build-release-config.mjs  check-file-sizes.mjs  check-px-text.mjs  fix-appimage.sh  sync-goose-avatars.mjs
desktop/src/: main.tsx  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  Info.plist  binaries  build.rs  tauri.conf.json
docs/: agent-import-deep-link.md  buzz-shared-compute-dev.md  get-buzz-on-your-phone.md  hermes-agent-acp.md  hermes-agent-rocky.md  lightning-wallet-nwc.md  lightning-wallet-phase1.md  mesh-llm-local-build.md  multi-tenant-relay.md  pr-screenshots.md  push-gateway-deployment.md  slack-import.md  welcome-kickoff-silent-failures.md
docs/admin/: README.md
docs/backend-providers/: crabbox.md
docs/moderation/: PLAN.md
examples/: README.md
migrations/: 0001_initial_schema.sql  0002_git_repo_names.sql  0004_channel_encryption_latch.sql  0005_default_channel_add_policy_owner_only.sql  0006_moderation.sql  0007_community_cascade_delete.sql  0007_community_soft_delete.sql  0007_nip_rs_retention.sql  0007_nip_rs_retention_and_search_allowlist.sql  0007_thread_metadata_keyset_index.sql  0009_nip_rs_database_guards.sql  0012_draft_wrap_fts.sql  0019_invite_terms_acceptances.sql  0020_sticker_catalog.sql  0021_created_at_fence_floor.sql  0025_community_host_aliases.sql
mobile/: AGENTS.md  CHANGELOG.md  pubspec.yaml
patches/: virtua@0.49.3.patch
schema/: schema.sql
scripts/: bundle-sidecars.sh  check-migration-immutability.sh  check-public-package-locks.sh  dev-setup.sh  grab-emoji.sh  instance-env.sh  post-screenshots.sh  refresh-harness-schemas.sh  release-rulesets.sh  reset-desktop-standalone-state.sh  run-tests.sh  seed-admin-dashboard.sh  seed-communities.sql  seed-hosts.py  seed-local-community.sh  setup-desktop-test-data.sh  stage-windows-bash.sh  start-isolated-test-relay.sh  start-relay-for-tests.sh  test-mobile-release-candidate-publisher.sh  test-reset-desktop-standalone-state.sh  test-signed-canary-contract.sh
web/: package.json
(+2175 files in other folders)
