[package]
name = "buzz-voice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable local voice model and pipeline primitives for Buzz"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
